tests/snapshot/error/source_locations/expression/yield_star/next_throws.exp
Error: next
  ┌ source_locations/expression/yield_star/next_throws.js:5:15
  |
5 |         throw new Error('next');
  |               ^
Stack trace:
  at next (source_locations/expression/yield_star/next_throws.js:5:15)
  at generator (source_locations/expression/yield_star/next_throws.js:12:3)
  at next (<native>)
  at <global> (source_locations/expression/yield_star/next_throws.js:16:1)